Updated the project name in build.xml and added reference to the test documents to the README.text, specifically their password ('test').

--- a/README.text
+++ b/README.text
@@ -65,6 +65,8 @@ BUILDING FROM SOURCE
         but you can force compilation with Java 1.6 by using a command
         like "ant jar6"
 
+        The password for test documents in the repository is 'test'.
+
 HOW DOES IT WORK?
 
 	The Ringlord Technologies ODF Java Library first parses the
