Updated the markup to make it more presentable as a readme on GitHub

--- a/README.org
+++ b/README.org
@@ -1,7 +1,7 @@
 * Ringlord Technologies ODF Java Library
-  Copyright © 2012 Ringlord Technologies
-  Copyright © 2012 K. Udo Schuermann
-  All rights reserved
+:  Copyright © 2012 Ringlord Technologiesa
+:  Copyright © 2012 K. Udo Schuermann
+:  All rights reserved
 ** Introduction
    The Ringlord Technologies ODF Java Library provides access to the
    contents of OASIS Open Document File containers such as supported
@@ -16,7 +16,7 @@
 
    For the license text see the LICENSE.TXT file in the rltodfjlib.jar
    archive (treat the archive as a zip file for that purpose), run the
-   software with a -L option (“java -jar rltodfjlib.jar -L”), or visit
+   software with a -L option (“java -jar rltodfjlib.jar -L”), or visit
    http://www.gnu.org/licenses/
 ** Use Cases
    You could use this library to test archives, extract & convert the
@@ -28,7 +28,7 @@
    The sources are at GitHub (Project: rltodfjlib):
    https://github.com/kuschuermann/rltodfjlib
 ** Building from Source
-   The command "ant jar" should do it. If that fails, here is what you
+   The command "ant jar" should do it. If that fails, here is what you
    need to know:
 
    The source code is essentially compatible with Java 1.5 but a minor
@@ -37,20 +37,19 @@
    
    Also required (for easy rebuilding) is Apache Ant 1.7 but an
    earlier version of Ant may also work; you could also rebuild the
-   software using "javac -d .build src/*.java" and then use jar to
+   software using "javac -d .build src/*.java" and then use jar to
    build an appropriate jar file from a manifest file and the contents
    of the .build/ directory. Essentially, these three commands are all
    you really need to build it:
    
-	mkdir .build
-       	javac -d .build src/*.java
-        jar cfe odf.jar Test -C .build/ . \
-                             -C . src/*.java \
-                             README.text LICENSE.TXT build.xml
+   : mddir .build
+   : jar cfe odf.jar Test -C .build/ . \
+   :                      -C . src/*.java \
+   :                      README.text LICENSE.TXT build.xml
 
    The included "build.xml" script builds for Java 1.7 by default but
    you can force compilation with Java 1.6 by using a command like
-   "ant jar6"
+   "ant jar6"
 
    The password for test documents in the repository is 'test'.
 ** How does it work?
